--- a/src/components/CommunityList.css
+++ b/src/components/CommunityList.css
@@ -7,10 +7,30 @@
     gap: 8px;
 }
 
+.sort-container {
+    cursor: pointer;
+    display: flex;
+    width: 20%;
+    height: 34px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+    border-radius: 16px;
+    background: #D9D9D9;
+    color: #424242;
+    text-align: center;
+    font-family: Pretendard;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
 .searchBy-container {
     cursor: pointer;
     display: flex;
-    width: 96px;
+    width: 20%;
     height: 34px;
     justify-content: center;
     align-items: center;
@@ -67,7 +87,7 @@
     line-height: normal;
 }
 
-.communitylist-write-button, disable-communitylist-write-button {
+.communitylist-write-button, .disable-communitylist-write-button {
     display: inline-flex;
     height: 34px;
     padding: 0px 20px;
@@ -95,4 +115,21 @@
     cursor: not-allowed;
     background: var(--gray, #7E7E7E);
     opacity: 0.6;
+}
+
+.adopted{
+    background: var(--middle-gray, #C6C6C6);
+    display: inline-flex;
+    padding: 10px 20px;
+    margin-right : 15px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 16px;
+    color: #FFF;
+    font-family: Pretendard;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
