--- a/src/components/MapComponent.css
+++ b/src/components/MapComponent.css
@@ -1,3 +1,76 @@
-.map-container{
-
+.checkbox-container{
+    display: inline-flex;
+    padding: var(--spacing-2, 2px) 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 3px;
 }
+
+.checked{
+    background-color: #F2FAE8;
+}
+
+.unchecked{
+    background: #FFF;
+}
+
+.map-checkbox{
+    width: 20px;
+    height: 20px;
+    flex-shrink: 0;
+    border-radius: 3px;
+    border: 2px solid var(--Text, #313926);
+}
+
+.map-checkbox:checked {
+    width: 20px;
+    height: 20px;
+    flex-shrink: 0;
+}
+
+.map-checkbox-text{
+    color: var(--Text, #313926);
+    text-align: center;
+    font-family: Pretendard;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.custom-checkbox input[type="checkbox"] {
+    display: none;
+  }
+  
+  /* 체크박스 마크 기본 스타일 */
+  .custom-checkbox .checkbox-mark {
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+    background-color: lightgray;
+    display: inline-block;
+    border-radius: 4px;
+    margin-right: 8px;
+    vertical-align: middle;
+    position: relative;
+  }
+  
+  /* 체크된 상태일 때 마크 스타일 */
+  .custom-checkbox input[type="checkbox"]:checked + .checkbox-mark {
+    background-color: #6C8D40;
+    border: 2px solid #6C8D40;
+  }
+  
+  /* 체크된 상태일 때 체크 표시 */
+  .custom-checkbox input[type="checkbox"]:checked + .checkbox-mark::after {
+    content: '';
+    position: absolute;
+    left: 6px;
+    top: 2px;
+    width: 10px;
+    height: 18px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    transform: rotate(45deg);
+  }
