--- a/src/container/pages/MyPageForm.css
+++ b/src/container/pages/MyPageForm.css
@@ -7,6 +7,7 @@
   background: #FFF;
 }
 .myPage {
+  user-select: none;
   display: flex;
   padding: 100px 400px 100px 400px;
   flex-direction: column;
