--- a/src/components/CommunityList.css
+++ b/src/components/CommunityList.css
@@ -1,3 +1,49 @@
+.mobile-table-container {
+    margin-top: 500px;
+    width: 360px;
+}
+
+.mobile-table-container tr {
+    cursor: pointer;
+}
+.table-container {
+    border: none;
+    border-collapse: collapse;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.07), 
+                0 2px 4px rgba(0,0,0,0.07), 
+                0 4px 8px rgba(0,0,0,0.07), 
+                0 8px 16px rgba(0,0,0,0.07),
+                0 16px 32px rgba(0,0,0,0.07), 
+                0 32px 64px rgba(0,0,0,0.07);
+    width: 1000px;
+    margin: auto;
+}
+
+.table-container tbody td:nth-child(2){
+    cursor: pointer;
+}
+
+.table-container th, .table-container td {
+    border-top: 1px solid gray;
+    border-bottom: 1px solid gray;
+    border-right: none;
+    padding: 8px;
+    text-align: center;
+}
+
+.table-container th:nth-child(2),
+.table-container td:nth-child(2) {
+    width: 40%;
+}
+
+.table-container th {
+    background-color: #f4f4f4;
+}
+
+.table-container th:hover {
+    background-color: #f5f5f5;
+}
+
 .search-container {
     display: flex;
     width: 448px;
@@ -117,18 +163,18 @@
     opacity: 0.6;
 }
 
-.adopted{
+.adopted-icon{
     background: var(--middle-gray, #C6C6C6);
     display: inline-flex;
-    padding: 10px 20px;
-    margin-right : 15px;
+    padding: 2px 5px 2px 5px;
+    margin-right : 5px;
     justify-content: center;
     align-items: center;
     gap: 10px;
     border-radius: 16px;
     color: #FFF;
     font-family: Pretendard;
-    font-size: 24px;
+    font-size: 12px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
