--- a/src/header.css
+++ b/src/header.css
@@ -133,20 +133,22 @@ header {
     flex-grow : 1;
   }
 
-  .search-bar, .long-search-bar{
+  .search-bar, .long-search-bar {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 25%;
+    width: 100%;
+    max-width: 400px; 
     padding: 0px 24px;
     border: 1px solid var(--Line, #DCDCDC);
     background: var(--White, #FFF);
     user-select: none;
   }
+  
   .search-bar {
     border-radius: 25px;
   }
-   
+  
   .long-search-bar {
     position: relative;
     border-radius: 25px 25px 0px 0px;
@@ -163,6 +165,7 @@ header {
     border: none;
     outline: none;
     padding-right: 10px;
+    margin-right: 5px;
   }
   
   .search-bar input{
@@ -186,18 +189,19 @@ header {
       padding-right: 8px;
     }
   }
+
   .clear-search-button {
-    width : 20px;
-    height : 20px;
+    width: 20px;
+    height: 20px;
     margin-left: 5px;
     cursor: pointer;
     color: var(--gray, #7E7E7E);
   }
-
-  .search-bar svg{
-    margin-right : -15px;
+  
+  .search-bar svg, .long-search-bar svg {
+    margin-right: -10px;
   }
-
+  
   .header-camera-button,
   .header-search-button {
     background-color: transparent;
