--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -23,12 +23,15 @@
     text-align: center;
   }
   
-  .card-image {
-    flex: 1 0 0;
-    align-self: stretch;
+  .card-images {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex: 1 0 0;
+    align-self: stretch;
+    width : 320px;
+    height : 200px;
+
     background: #D9D9D9;
   }
 
