--- a/src/container/pages/MainForm.css
+++ b/src/container/pages/MainForm.css
@@ -98,8 +98,9 @@
     align-items: center;
     justify-content: center;
     gap : 50px;
-    padding-top:50px;
-    padding-bottom : 50px;
+    padding: 50px 20px;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .main-list{
@@ -185,10 +186,12 @@
 }
 
 .main-list-second-content{
-    width: 400px;
-    height: 400px;
     flex-shrink: 0;
-    background-color: #D9D9D9;
+}
+
+.main-list,
+.main-list-second-content {
+    flex: 1;
 }
 
 .MoveTopBtn {
