--- a/src/components/CommunityList.css
+++ b/src/components/CommunityList.css
@@ -1,3 +1,11 @@
+.NotDrag{
+    user-select: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    min-height: calc(100vh - 70px);
+}
 .mobile-table-container {
     margin-top: 500px;
     width: 360px;
