--- a/src/components/CompareForm.css
+++ b/src/components/CompareForm.css
@@ -13,29 +13,31 @@ textarea.solution-input {
 
 .compare-title{
     color: #424242;
+    margin : 0px;
     font-family: Pretendard;
-    font-size: 54px;
+    font-size: 32px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
 }
 
 .compare-font {
+  text-align: center;
   color : #6C8D40;
   font-size : 25px;
-  margin-right: 15px;
-  margin-bottom:-10px;
 }
 
-.compare-default-text{
-    color: #424242;
-    font-family: Pretendard;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: normal;
+.compare-default-text {
+  color: #424242; 
+  font-size: 18px;
+  font-weight: 400; 
+  line-height: 1.6;
+  margin: 8px 0; 
+  padding: 0 10px; 
+  background-color: #f8f8f8; 
+  border-radius: 5px; 
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
-
 .solution-input{
     border: none;
     width : 350px;
@@ -66,7 +68,12 @@ textarea.solution-input {
     width : 25%;
     height : 65px;
 }
-
+.button-container {
+  margin : 0px;
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
 .origin-container {
     border: 6px solid #949494;
     user-select: none;
@@ -76,7 +83,7 @@ textarea.solution-input {
     justify-content: center;
     border-radius: 22px;
     width : 500px;
-    height : 800px;
+    height : 900px;
     margin-right: 15px;
 }
 
@@ -88,7 +95,7 @@ textarea.solution-input {
   align-items: center; 
   justify-content: center;
   width: 100%;
-  height : 700px;
+  height : 800px;
 }
 
 .checkbox-label-container {
@@ -104,6 +111,33 @@ textarea.solution-input {
   border: 6px solid #6C8D40;
   border-radius: 22px;
   width : 500px;
+}
+
+.compare-input-wrap {
+  width: 100%;
+  max-width: 500px;
+  margin: 10px 0;
+  display: flex;
+  justify-content: center;
+}
+
+.compare-input {
+  width: 100%;
+  padding: 10px 15px; 
+  border: 1px solid #D9D9D9;
+  border-radius: 8px;
+  font-size: 16px;
+  font-family: Pretendard, sans-serif;
+  color: #424242; 
+  background-color: #f9f9f9; 
+  box-sizing: border-box;
+  transition: border-color 0.3s, box-shadow 0.3s;
+}
+
+.compare-input:focus {
+  border-color: #6C8D40;
+  box-shadow: 0 0 5px rgba(108, 141, 64, 0.3);
+  outline: none;
 }
 
 .search-upload-button {
@@ -136,7 +170,7 @@ textarea.solution-input {
     margin-top: 60px;
     margin-left : 8px;
     padding: 8px 20px;
-    background-color: #388e3c;
+    background-color: #6C8D40;
     text-align: center;
     font-family: Pretendard;
     width : 25%;
