--- a/src/container/pages/MyPageForm.css
+++ b/src/container/pages/MyPageForm.css
@@ -1,20 +1,27 @@
 .padding-layout{
-  margin-top:600px;
+  margin-top: 70px;
   display: flex;
-  width: 1920px;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  width: 100%;
+  max-width: 800px;
+  min-height: calc(100vh - 70px);
+  margin: 0 auto;
   background: #FFF;
 }
 .myPage {
   user-select: none;
   display: flex;
-  padding: 100px 400px 100px 400px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 90px;
   border: 1px solid #D9D9D9;
+  min-height: 100vh;
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 .myPage h2 {
