--- a/src/container/pages/SolutionDetailForm.css
+++ b/src/container/pages/SolutionDetailForm.css
@@ -1,6 +1,10 @@
 .solution-detail-form-container{
     user-select: none;
-    margin-top:400px;
+    display: flex;
+    align-items: center; 
+    flex-direction: column;
+    justify-content: center;
+    min-height: calc(100vh - 70px);
 }
 
 .result-title{
