버튼 위치 변경

--- a/src/components/CommunityWrite.css
+++ b/src/components/CommunityWrite.css
@@ -73,3 +73,10 @@
     transition: background-color 0.3s;
     font-family : Pretendard-Bold;
 }
+
+.community-write-button-container{
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    margin-top:20px;
+}
