--- a/src/container/pages/SolutionDetailForm.css
+++ b/src/container/pages/SolutionDetailForm.css
@@ -4,7 +4,7 @@
     align-items: center; 
     flex-direction: column;
     justify-content: center;
-    min-height: calc(100vh - 70px);
+    margin-top:70px;
 }
 
 .result-title{
