--- a/src/container/pages/Solution.css
+++ b/src/container/pages/Solution.css
@@ -54,8 +54,8 @@ textarea.solution-input {
 
 .solution-uploaded-image {
   margin : 0 auto;
-  width: 40%;
-  height: 40%;
+  width: 200px;
+  height: 200px;
 }
 
 .solution-detail-font {
