--- a/src/container/pages/SearchDetailForm.css
+++ b/src/container/pages/SearchDetailForm.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: calc(100vh - 70px);
+    margin-top: 70px;
 }
 
 .result-title{
